package(default_visibility = ["//visibility:public"])

exports_files(["LICENSE"])

licenses(["notice"])

filegroup(
    name = "distribution",
    srcs = [
        "BUILD.bazel",
        "LICENSE",
        "MODULE.bazel",
        "cipd_deps.bzl",
        "//cipd:distribution",
        "//docs:distribution",
    ],
)
